--- a/style.css
+++ b/style.css
@@ -1,28 +1,41 @@
 *{
-	padding:0;
-	margin:0;
+    padding:0;
+    margin:0;
 }
 
 table{
-	width:500px;
-	height:500px;
-	margin-top: 100px;
-	margin-left: 100px;
-	border-collapse:collapse;
+    /*width:500px;
+    height:500px;*/
+    margin-top: 100px;
+    margin-left: 100px;
+    border-collapse:collapse;
+}
+
+table td {
+    width: 25px;
+    height: 25px;
 }
 
 .border_top{
-	border-top:1px solid black;
+    border-top:1px solid black;
 }
 
 .border_bottom{
-	border-bottom:1px solid black;
+    border-bottom:1px solid black;
 }
 
 .border_left{
-	border-left:1px solid black;
+    border-left:1px solid black;
 }
 
 .border_right{
-	border-right:1px solid black;
+    border-right:1px solid black;
+}
+
+.disable{
+    display: none;
+}
+
+.active {
+    display: block;
 }
