Fix line and column and add color on start and end cells

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -188,3 +188,11 @@ table td {
 .color {
     background-color: rgb(227,118,0);
 }
+
+.colorStart {
+    background-color: #16ff00;
+}
+
+.colorEnd {
+    background-color: #ff3000;
+}
