Changement résolution vers plus optimisée

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -188,6 +188,9 @@ table td {
 .color {
     background-color: rgba(255,175,69,1);
 }
+.color2 {
+    background-color: #5FB404;
+}
 
 .colorStart {
     background-color: #16ff00;
