Debug rollover buttons

--- a/style.css
+++ b/style.css
@@ -402,3 +402,22 @@ section#mazeContainer{
     font-family:AgencyFBbold;
     font-size:22px;
 }
+.press-upArrow{
+	background-position:-54px -220px;
+}
+.press-downArrow{
+	background-position:-51px -277px;
+}
+.press-leftArrow{
+	background-position:-4px -250px;
+}
+.press-rightArrow{
+	background-position:-95px -250px;
+}
+.press-redButton{
+	background-position:center -254px;
+}
+.press-genButton{
+	margin-top:1px;
+	box-shadow: 0px 1px 0px 0px rgba(109, 33, 9, 1);
+}
