--- a/style.css
+++ b/style.css
@@ -403,21 +403,21 @@ section#mazeContainer{
     font-size:22px;
 }
 .press-upArrow{
-	background-position:-54px -220px;
+	background-position:-54px -220px!important;
 }
 .press-downArrow{
-	background-position:-51px -277px;
+	background-position:-51px -277px!important;
 }
 .press-leftArrow{
-	background-position:-4px -250px;
+	background-position:-4px -250px!important;
 }
 .press-rightArrow{
-	background-position:-95px -250px;
+	background-position:-95px -250px!important;
 }
 .press-redButton{
-	background-position:center -254px;
+	background-position:center -254px!important;
 }
 .press-genButton{
-	margin-top:1px;
-	box-shadow: 0px 1px 0px 0px rgba(109, 33, 9, 1);
+	margin-top:1px!important;
+	box-shadow: 0px 1px 0px 0px rgba(109, 33, 9, 1)!important;
 }
